--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "The true nobility is in being superior to your previous self."
 ---
 
 {% for post in paginator.posts %}
