--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ header-img: "img/post-5.jpg"
     <p>这是我记录学习的个人小站。如果有什么问题，欢迎提出探讨。如果有想一起交流学习的小伙伴，我乐意之至～</p>
   
     <h5>联系我</h5>
-    <p>给terese发送邮件teresesong@163.com</p>
+    <p>发送邮件至teresesong@163.com</p>
     
 </div>
 
